--- a/readme.text
+++ b/readme.text
@@ -6,7 +6,8 @@ https://developers.google.com/maps/documentation/places/web-service/search-nearb
 https://developers.google.com/maps/documentation/places/web-service/place-data-fields
 
 TO DO
-    Website Exception just triggers on no phone or no site
+    -The Error handling Structure in exception_finder triggers on a no-phone or no-site
+    -Look at other programs that achieve the same objectives on github.
     Store Exceptions in a different json
     Learn what and how to use gitbash
     convert to o
